--- a/index.html
+++ b/index.html
@@ -33,5 +33,16 @@
         <img src="images/mehedi.png" alt="" />
       </div>
     </section>
+    <section class="section2">
+      <div class="half_width">
+        <img src="images/jhankar2.png" alt="" />
+      </div>
+      <div class="half_width">
+        <h1>Dream Big</h1>
+        <h2>Become a web developer</h2>
+        <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+        <a class="hire_me_class" target="_blank" href="#">DOWNLOAD RESUME</a>
+      </div>
+    </section>
   </body>
 </html>
